add form check char length & number size check